# data-portal

./: .gitignore  .rustfmt.toml  ACTUAL_TEST_RESULTS.md  CLAUDE.md  CONTRIBUTING.md  CUSTOM_PROTOCOL_DESIGN_RECOMMENDATIONS.md  Cargo.toml  DEMO.md  EVALUATION_ANALYSIS.md  HYBRID_TRANSPORT_INTEGRATION.md  INTEGRATION_DESIGN.md  LICENSE  MULTILINGUAL_DISTRIBUTED_PROTOCOL_DESIGN.md  Makefile  PERFORMANCE_OPTIMIZATION_TODO.md  PERFORMANCE_TEST_RESULTS.md  POSIX_SHARED_MEMORY_TEST_RESULTS.md  POSIX_SPEED_ANALYSIS.md  PROJECT_REFERENCE.md  PROJECT_TODO.md  README.md  TESTING_SUMMARY_FINAL.md  TEST_COVERAGE_SUMMARY.md  UI_BACKEND_LAUNCH_DESIGN.md  comprehensive_ipc_test.sh  debug_backend_status.sh  debug_test.txt  librorum.toml  posix_actual_benchmark.rs  posix_demo_working.rs  posix_performance_client.swift  posix_performance_test.rs  quick_test.swift  run_performance_tests.sh  run_tests.sh  rust_posix_server.rs  simple_test_rust_rust.sh  simple_test_swift_rust.sh  swift_posix_client.swift  swift_posix_simple.swift  (+15 more)
.cargo/: config.toml
.cursor/rules/: language.mdc  project.mdc  script.mdc
aeron_bench/: AERON_IMPLEMENTATION_RESULTS.md  AERON_RS_PERFORMANCE_TEST_RESULTS.md  BIDIRECTIONAL_PERFORMANCE_FINAL.md  BOTTLENECK_OPTIMIZATION_RESULTS.md  Cargo.toml  PERFORMANCE_ANALYSIS.md  README.md  REAL_PERFORMANCE_ANALYSIS.md  quick_aeron_test.sh  quick_test.sh  run_benchmarks.sh  test_aeron_swift_compatibility.sh  test_bidirectional_aeron.sh  test_ipc.sh  test_reliable_aeron.sh  test_swift_aeron_protocol.sh  test_swift_rust_aeron.sh
aeron_bench/src/: aeron_rust_receiver.rs  aeron_swift_compatible.rs  bidirectional_aeron_rust.rs  grpc_baseline.rs  ipc_aeron_receiver.rs  ipc_performance.rs  ipc_test.rs  reliable_aeron_receiver.rs  reliable_aeron_sender.rs  rust_ipc_sender.rs  simple_test.rs  simple_udp_aeron_receiver.rs  simple_udp_aeron_sender.rs  udp_test.rs
cli/: Cargo.toml
cli/src/: lib.rs  main.rs
client/librorum.xcodeproj/: project.pbxproj
core/: Cargo.toml  build.rs
core/examples/: hybrid_daemon.rs  test_data_portal_integration.rs
core/src/: config.rs  daemon.rs  hybrid_main.rs  lib.rs  logger.rs  main.rs
core/src/config/: example.toml
core/src/node_manager/: file_service.rs  hybrid_file_service.rs  hybrid_file_service_simple.rs  hybrid_file_service_v2.rs  hybrid_node_manager.rs  log_service.rs  mdns_manager.rs  mod.rs  mod_tests.rs  network_config.rs  node_client.rs  node_health.rs  node_manager.rs  node_service.rs
core/src/proto/: file.proto  mod.rs  node.proto
core/src/vdfs/: comprehensive_tests.rs  integration_test.rs  mod.rs  tests.rs
core/src/vdfs/cache/: cache_manager.rs  cache_policy.rs  disk_cache.rs  lru_cache.rs  memory_cache.rs  mod.rs  sync.rs
core/src/vdfs/filesystem/: file_handle.rs  mod.rs  path_resolver.rs  permissions.rs  vfs.rs
core/src/vdfs/metadata/: consistency.rs  database.rs  database_tests.rs  index.rs  manager.rs  mod.rs  performance_tests.rs  rocksdb_manager.rs  schema.sql  sled_manager.rs
core/src/vdfs/storage/: backend.rs  chunk_manager.rs  compression.rs  local_storage.rs  mod.rs
core/tests/: data_portal_integration_test.rs  simple_integration_test.rs
examples/: complete_performance_matrix.rs  cross_language_test.rs  file_size_performance_test.rs  gb_performance_test.rs  rust_service.rs  shared_memory_demo.rs  simple_demo.rs  simple_rust_demo.rs
examples/mdns_test/: Cargo.toml  README.md  mdns_discover_test.rs  mdns_publish_test.rs
examples/tklog_test/: Cargo.toml
examples/tklog_test/src/: main.rs
examples/tracing_test/: test_tracing.rs
librorum/: FINAL_TEST_STATUS.md  IMMEDIATE_ACTIONS.md  TESTING_GUIDE.md  demo_tests.sh  generate_grpc_swift.sh  generate_grpc_swift_v2.sh  run_real_backend_tests.sh  run_tests.sh  run_tests_correct.sh  setup_grpc_testing.sh  simple_grpc_test.swift  simple_test.swift  start_backend_for_tests.sh  test_complete_grpc.swift  test_grpc_connection.swift  test_grpc_integration.swift  test_pure_grpc_communication.sh  test_swift_grpc.swift  test_verification.swift
librorum/librorum/: Item.swift  librorumApp.swift
librorum/librorum.xcodeproj/: project.pbxproj
librorum/librorum/Core/: GRPCCommunicator.swift
librorum/librorum/Models/: FileItem.swift  NodeInfo.swift  SyncHistory.swift  SystemHealth.swift  UserPreferences.swift
librorum/librorum/Services/: BackendLaunchManager.swift  CoreManager.swift  DataPortalManager.swift  EncryptionManager.swift  FileUploadService.swift  LibrorumClient.swift  SyncManager.swift  UIDataAdapter.swift
librorum/librorum/Transport/: SharedMemoryManager.swift  UtpMessage.swift  UtpTransport.swift
librorum/librorumTests/: librorumTests.swift
librorum/librorumUITests/: librorumUITests.swift  librorumUITestsLaunchTests.swift
rust/core/: Cargo.toml
rust/core/src/: binary_protocol.rs  error.rs  lib.rs  manager.rs  metrics.rs  node.rs  strategy.rs  transport.rs
rust/examples/: binary_protocol_benchmark.rs  cross_language_server.rs  rust_rust_benchmark.rs  tcp_vs_memory_benchmark.rs  zero_copy_benchmark.rs
rust/network/: Cargo.toml
rust/network/src/: data_portal.rs  lib.rs  protocol.rs  rust_transport.rs  swift.rs  universal.rs
rust/shared-memory/: Cargo.toml
rust/shared-memory/src/: adapter.rs  error.rs  lib.rs  platform.rs  protocol.rs  region.rs  transport.rs
shared/: Cargo.toml  build.rs
shared/examples/: utp_demo.rs
shared/src/: config.rs  lib.rs  utils.rs
shared/src/proto/: log.proto  mod.rs
shared/src/transport/: client.rs  hybrid.rs  mod.rs  network.rs  protocol.rs  server.rs  shared_memory.rs  utils.rs
src/: lib.rs  main.rs  simple_test.rs
swift/: Package.swift  posix_shm_client.swift
temp_icon/: README.md
universal-transport/: .gitignore  Cargo.toml  PERFORMANCE_TEST_RESULTS.md  README.md  demo_universal_transport.sh
universal-transport/.github/workflows/: ci.yml
universal-transport/examples/: complete_performance_matrix.rs  cross_language_test.rs  file_size_performance_test.rs  gb_performance_test.rs  simple_rust_demo.rs
universal-transport/rust/core/: Cargo.toml
universal-transport/src/: main.rs
(+73 files in other folders)
