[workspace]

[package]
name = "universal-transport"
version = "2.0.0"
edition = "2021"
authors = ["Claude AI <noreply@anthropic.com>"]
license = "MIT"
description = "High-performance cross-platform communication protocol for Rust and Swift"
repository = "https://github.com/Gyangu/universal-transport"
keywords = ["transport", "ipc", "shared-memory", "zero-copy", "posix"]
categories = ["network-programming", "concurrency"]

[dependencies]
tokio = { version = "1.44", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
libc = "0.2"
crc32fast = "1.4"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

[[example]]
name = "simple_demo"
path = "examples/simple_demo.rs"

[[example]]
name = "cross_language_test"
path = "examples/cross_language_test.rs"

[[example]]
name = "gb_performance_test"
path = "examples/gb_performance_test.rs"

[[example]]
name = "file_size_performance_test"
path = "examples/file_size_performance_test.rs"

[[example]]
name = "complete_performance_matrix"
path = "examples/complete_performance_matrix.rs"