[package]
name = "librorum-cli"
version = "0.1.0"
edition = "2021"
description = "Command line interface for librorum"
license = "MIT"
authors = ["gyangu <gyangu_star@icloud.com>"]

[lib]
name = "librorum_cli"
path = "src/lib.rs"

[[bin]]
name = "librorum"
path = "src/main.rs"

[dependencies]
# Shared library
librorum-shared = { path = "../shared" }

# gRPC client
tonic = "0.11.0"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
tokio-stream = "0.1.14"

# File type detection
mime_guess = "2.0.4"

# Time handling
chrono = { version = "0.4.31", features = ["serde"] }

# CLI framework
clap = { version = "4.4.16", features = ["derive"] }

# Error handling and utilities
anyhow = "1.0.80"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# Configuration
toml = "0.5.11"
serde = { version = "1.0.195", features = ["derive"] }

# File system
dirs = "5.0.1"
which = "4.4.2"
url = "2.5.0"

[dev-dependencies]
tempfile = "3.8.1"