[package]
name = "librorum-core"
version = "0.1.0"
edition = "2021"
description = "Core daemon implementation"
license = "MIT"
authors = ["gyangu <gyangu_star@icloud.com>"]
readme = "README.md"

[lib]
name = "librorum_core"
path = "src/lib.rs"

[[bin]]
name = "librorum-core"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["daemon-unix"]
daemon-unix = ["daemonize"]
windows_service = []
windows-service = []

[dependencies]
# Shared library
librorum-shared = { path = "../shared" }

# 基础依赖
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "signal", "process"] }
tokio-stream = { version = "0.1.15", features = ["sync", "net"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
futures = "0.3.30"
futures-util = "0.3.30"
async-trait = "0.1.77"
anyhow = "1.0.80"
thiserror = "1.0.56"
log = "0.4.20"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-log = "0.2.0"
tracing-appender = "0.2.3"
dirs = "5.0.1"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
toml = "0.5.11"
lazy_static = "1.4.0"
glob = "0.3.1"
chrono = "0.4.34"
clap = { version = "4.4.16", features = ["derive"] }
daemonize = { version = "0.5.0", optional = true }

# 配置
config = { version = "0.13.4", features = ["json", "toml", "yaml", "ini"] }

# 网络通信
tonic = "0.11.0"
prost = "0.12.3"
socket2 = "0.5.5"
bytes = "1.5.0"

# 数据库
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "sqlite"] }
sled = { version = "0.34.7", default-features = false }
rocksdb = { version = "0.23.0", default-features = true }
bincode = "1.3.3"

# 压缩
flate2 = "1.0.28"
zstd = "0.13.0"
lz4_flex = "0.11.0"

# 服务发现
mdns-sd = "0.13.0"
if-addrs = "0.10.1"
hostname = "0.3.1"

# UUID生成
nanoid = "0.4.0"
uuid = { version = "1.6.1", features = ["v4", "serde"] }

# 文件监控
notify = "6.1.1"

# 杂项
rand = "0.8.5"
time = "0.3.30"
num_cpus = "1.16.0"

# VDFS dependencies
sha2 = "0.10.8"
hex = "0.4.3"
walkdir = "2.4.0"
tempfile = "3.8.1"
regex = "1.10.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2.153"

[target.'cfg(windows)'.dependencies]
windows-service = { version = "0.8.0" }

[dev-dependencies]
# 测试框架
tokio-test = "0.4.3"
serial_test = "3.0.0"
mockall = "0.12.1"
tempfile = "3.8.1"
rstest = "0.18.2"
proptest = "1.4.0"
futures = "0.3.30"

# 用于集成测试的 gRPC 测试工具
tower = "0.4.13"
tower-service = "0.3.2"
hyper = "0.14.28"

# 用于端到端测试的容器化测试
testcontainers = "0.15.0"

# 断言和测试工具
assert_matches = "1.5.0"
pretty_assertions = "1.4.0"

[build-dependencies]
tonic-build = "0.11.0"