[package]
name = "universal-transport"
version = "2.0.0"
edition = "2021"
authors = ["Claude AI <noreply@anthropic.com>"]
license = "MIT"
description = "High-performance cross-platform communication protocol for Rust and Swift"
repository = "https://github.com/Gyangu/universal-transport"
keywords = ["transport", "ipc", "shared-memory", "zero-copy", "posix"]
categories = ["network-programming", "concurrency"]

[workspace]
members = [
    "rust/core",
    "rust/shared-memory", 
    "rust/network"
]

[dependencies]
tokio = { version = "1.44", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
crc32fast = "1.4"
tracing = "0.1"
anyhow = "1.0"

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "utp-server"
path = "src/main.rs"

[[example]]
name = "simple_demo"
path = "examples/simple_rust_demo.rs"

[[example]]
name = "shared_memory_demo"
path = "examples/shared_memory_demo.rs"

[[bench]]
name = "posix_benchmark"
harness = false