[package]
name = "mdns_test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mdns_discover"
path = "mdns_discover_test.rs"

[[bin]]
name = "mdns_publish"
path = "mdns_publish_test.rs"

[dependencies]
mdns-sd = "0.13.8"
env_logger = "0.11"
log = "0.4"
flume = "0.11"
hostname = "0.3"
if-addrs = "0.10" 