[package]
name = "data-portal-network"
version = "0.1.0"
edition = "2021"
description = "Network transport protocols for Data Portal Protocol"
license = "MIT"
repository = "https://github.com/Gyangu/data-portal"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
rmp-serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
crc32fast = { workspace = true }
lz4 = { workspace = true }

# Local dependencies (removed to avoid circular dependency)

# Networking specific
tokio-util = { version = "0.7", features = ["codec"] }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = ["rust-protocol", "swift-protocol", "data-portal-protocol"]
rust-protocol = []
swift-protocol = []
data-portal-protocol = []
compression = []