[package]
name = "data-portal-shared-memory"
version = "0.1.0"
edition = "2021"
description = "Cross-platform shared memory transport for Data Portal Protocol"
license = "MIT"
repository = "https://github.com/Gyangu/data-portal"

[dependencies]
# Core module dependency
data-portal-core = { path = "../core" }

# Workspace dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
cfg-if = { workspace = true }
crc32fast = { workspace = true }

# Additional dependencies
num_cpus = "1.0"
parking_lot = "0.12"
hostname = "0.3"
bincode = "1.3"

# Platform-specific dependencies
[target.'cfg(unix)'.dependencies]
nix = { workspace = true, features = ["mman", "fs"] }
memmap2 = { workspace = true }
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"

[features]
default = []
encryption = ["aes-gcm"]

[dependencies.aes-gcm]
version = "0.10"
optional = true