[package]
name = "universal-transport-core"
version = "2.0.0"
edition = "2021"
authors = ["Claude AI <noreply@anthropic.com>"]
license = "MIT"
description = "Core transport engine for Universal Transport Protocol"

[dependencies]
tokio = { version = "1.44", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
crc32fast = "1.4"
tracing = "0.1"
anyhow = "1.0"